[workspace]
resolver = "2"
members = ["bin/cuc", "lib/cuc-lib"]

[workspace.package]
homepage = "https://github.com/IMXEren/cuc"
repository = "https://github.com/IMXEren/cuc"
authors = ["IMXEren <vickrey_readings@simplelogin.com>"]
license = "MIT"
readme = "README.md"

[workspace.dependencies]
cuc = { path = "./bin/cuc" }
cuc-lib = { path = "./lib/cuc-lib", version = "0.1.0" }

[profile.release]
strip = true
lto = true
